<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/viewSignIn"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#fff">


    <ImageView

        android:id="@+id/img_tick"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"

        android:src="@drawable/tick" />


    <EditText

        android:id="@+id/et_emailid"

        android:layout_width="340dp"

        android:layout_height="wrap_content"

        android:layout_below="@id/img_tick"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="50dp"

        android:hint="@string/email_id" />


    <android.support.design.widget.TextInputLayout

        android:id="@+id/til_pass"

        android:layout_width="340dp"

        android:layout_height="wrap_content"

        android:layout_below="@id/et_emailid"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp"

        app:passwordToggleEnabled="true">


        <android.support.design.widget.TextInputEditText

            android:id="@+id/tiet_password"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:hint="@string/enter_password"

            android:inputType="textPassword" />


    </android.support.design.widget.TextInputLayout>


    <TextView

        android:id="@+id/tv_forgotpass"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignEnd="@id/til_pass"

        android:layout_alignRight="@id/til_pass"

        android:layout_below="@id/til_pass"

        android:text="@string/forgot_password"
        android:textColor="#D30000" />


    <Button

        android:id="@+id/btn_signin"

        android:layout_width="340dp"

        android:layout_height="wrap_content"

        android:layout_below="@id/tv_forgotpass"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"

        android:background="@color/colorPrimary"

        android:text="@string/sign_in"

        android:textColor="#fff"

        android:textSize="20sp"

        android:textStyle="bold" />


    <TextView

        android:id="@+id/tv_account"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@id/btn_signin"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"

        android:text="@string/do_not_have_an_account"

        android:textSize="20sp" />


</RelativeLayout>