<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lt_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_nointernet"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/imagecontentdescription" />


    <TextView
        android:id="@+id/tvnointernet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_nointernet"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/nointernetmessage"
        android:textColor="#FFF"
        android:textSize="16sp"

        />

    <Button
        android:id="@+id/btn_checkinternet"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/try_again" />

</RelativeLayout>