<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/viewSignUp"

    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:src="@drawable/ic_menu_camera" />


    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/circleImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:text="@string/sign_in"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/full_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_fullname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/email" />
    <!--<EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:id="@+id/et_password"/>-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/mobile_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#00CB90"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>